@@ -1,6 +1,6 @@
 /* jshint browser: true */
 /* jshint unused: false */
-/* global window, frontendConfig, exports, Backbone, _, $, templateEngine, arangoHelper, Joi */
+/* global window, frontendConfig, Backbone, _, $, templateEngine, arangoHelper, Joi */
 
 (function () {
   'use strict';
