@@ -1,6 +1,6 @@
 /* jshint browser: true */
 /* jshint unused: false */
-/* global frontendConfig, window, document, Backbone, $, arangoHelper, templateEngine, Joi */
+/* global frontendConfig, window, Backbone, $, arangoHelper, templateEngine, Joi */
 (function () {
   'use strict';
 
